--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Be4rJP Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/Be4rJP/BlockStudio</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
