--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>be4rjp</groupId>
-    <artifactId>BlockStudio</artifactId>
+    <artifactId>blockstudio</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
