--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub Be4rJP Apache Maven Packages</name>
+            <name>BlockStudio Maven Packages</name>
             <url>https://maven.pkg.github.com/Be4rJP/BlockStudio</url>
         </repository>
     </distributionManagement>
