--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.be4rjp</groupId>
+    <groupId>be4rjp</groupId>
     <artifactId>blockstudio</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>BlockStudio</name>
@@ -19,7 +19,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>BlockStudio Maven Packages</name>
+            <name>GitHub Be4rJP Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/Be4rJP/BlockStudio</url>
         </repository>
     </distributionManagement>
